--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
 
-    <title>firebase auth context</title>
+    <title>firebase auth context darkmode</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
